<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <TextView
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_log_file_name_view_label"
        android:textSize="20sp"
    />
    <EditText 
        android:id="@+id/logFileNameEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/enter_log_file_name_edit_hint"
        android:text="@string/enter_log_file_name_edit_default"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/create_button_label"
            android:id="@+id/CreateLogFileButton"
            android:onClick="onButtonClickCreateLogFile"/>
	    <Button
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="wrap_content"
	        android:text="@string/close_button_label"
	        android:id="@+id/closeButton"
	        android:onClick="onButtonClickClose">
	    </Button>
	</LinearLayout>
    
</LinearLayout>