<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#333333"
    android:orientation="vertical" >
    <TextView
        android:background="#333333"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_processing_data"
        android:textSize="30sp"
        android:textColor="#FFFFFF"
        android:gravity="center"
        android:padding="2dp"
       />
         
    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="#555555">
        <TextView
            android:text="@string/processing_state_view_label"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            />
        <TextView
            android:id="@+id/ProcessStatus"
            android:text="@string/processing_state_view_value"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:gravity="right"
            />
        </LinearLayout>
        
    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="#555555"
        android:visibility="gone">
        <TextView
            android:text="@string/saved_state_view_label"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:visibility="gone"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            />
        <TextView
            android:visibility="gone"
            android:id="@+id/SavedStateView"
            android:text="@string/saved_state_view_value"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:gravity="right"
            />
        </LinearLayout>
        
     <LinearLayout
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="#555555"
        android:visibility="gone">
        <TextView
            android:text="@string/vibrate_feedback_view_label"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            />
        <TextView
            android:id="@+id/vibrateFeedbackStatus"
            android:text="@string/vibrate_feedback_view_value"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:gravity="right"
            />
         </LinearLayout>
         <LinearLayout
	        android:orientation="horizontal"
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent"
	        android:background="#555555"
	        android:visibility="gone">
	        <TextView
	            android:text="@string/alert_feedback_view_label"
	            android:layout_height="wrap_content"
	            android:layout_width="0dp"
	            android:layout_weight="1"
	            android:textSize="20sp"
	            android:textColor="#FFFFFF"
	            />
	        <TextView
	            android:id="@+id/alertFeedbackStatus"
	            android:text="@string/alert_feedback_view_value"
	            android:layout_height="wrap_content"
	            android:layout_width="0dp"
	            android:layout_weight="1"
	            android:textSize="20sp"
	            android:textColor="#FFFFFF"
	            android:gravity="right"
	            />
        </LinearLayout>
          <LinearLayout
	        android:orientation="horizontal"
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent"
	        android:background="#555555"
	        android:visibility="gone">
	        <TextView
	            android:text="@string/persons_height_view_label"
	            android:layout_height="wrap_content"
	            android:layout_width="0dp"
	            android:layout_weight="1"
	            android:textSize="20sp"
	            android:textColor="#FFFFFF"
	            />
	        <TextView
	            android:id="@+id/personsHeight"
	            android:text=""
	            android:layout_height="wrap_content"
	            android:layout_width="0dp"
	            android:layout_weight="1"
	            android:textSize="20sp"
	            android:textColor="#FFFFFF"
	            android:gravity="right"
	            />
        </LinearLayout>
         <LinearLayout
	        android:orientation="horizontal"
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent"
	        android:background="#555555">
	        <TextView
	            android:text="@string/threshold_view_label"
	            android:layout_height="wrap_content"
	            android:layout_width="0dp"
	            android:layout_weight="1"
	            android:textSize="20sp"
	            android:textColor="#FFFFFF"
	            />
	        <TextView
	            android:id="@+id/thresholdSettingView"
	            android:text=""
	            android:layout_height="wrap_content"
	            android:layout_width="0dp"
	            android:layout_weight="1"
	            android:textSize="20sp"
	            android:textColor="#FFFFFF"
	            android:gravity="right"
	            />
        </LinearLayout>
         <LinearLayout
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="#555555"
        android:visibility="gone"
    	>
	         <!--  android:visibility="gone"-->
	        <TextView
	            
	            android:text="@string/average_delta_view_label"
	            android:layout_height="wrap_content"
	            android:layout_width="0dp"
	            android:layout_weight="1"
	            android:textSize="20sp"
	            android:textColor="#FFFFFF"
	            android:gravity="left"
	            />
	        <TextView
	            android:id="@+id/averageDistanceView"
	            android:text="@string/no_data"
	            android:layout_height="wrap_content"
	            android:layout_width="0dp"
	            android:layout_weight="1"
	            android:textSize="20sp"
	            android:textColor="#FFFFFF"
	            android:gravity="right"
	            />
	        </LinearLayout>
	    <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="#555555"
            android:visibility="gone">
	        <TextView
	            android:text="@string/average_sag_delta"
	            android:layout_height="wrap_content"
	            android:layout_width="0dp"
	            android:layout_weight="1"
	            android:textSize="20sp"
	            android:textColor="#FFFFFF"
	            android:gravity="left"
	            />
	        <TextView
	            android:id="@+id/averageDistanceSagitalView"
	            android:text="@string/no_data"
	            android:layout_height="wrap_content"
	            android:layout_width="0dp" 
	            android:layout_weight="1"
	            android:textSize="20sp"
	            android:textColor="#FFFFFF"
	            android:gravity="right"/>
        </LinearLayout>  
         <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="#555555"
            android:visibility="gone">
	        <TextView
	            android:text="@string/average_cor_delta"
	            android:layout_height="wrap_content"
	            android:layout_width="0dp"
	            android:layout_weight="1"
	            android:textSize="20sp"
	            android:textColor="#FFFFFF"
	            android:gravity="left"/>
	        <TextView
	            android:id="@+id/averageDistanceCoronalView"
	            android:text="@string/no_data"
	            android:layout_height="wrap_content"
	            android:layout_width="0dp" 
	            android:layout_weight="1"
	            android:textSize="20sp"
	            android:textColor="#FFFFFF"
	            android:gravity="right"/>
        </LinearLayout>  
        <LinearLayout
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="#555555"
    	>
	         <!--  android:visibility="gone"-->
	        <TextView
	            android:text="@string/max_delta"
	            android:layout_height="wrap_content"
	            android:layout_width="0dp"
	            android:layout_weight="1"
	            android:textSize="20sp"
	            android:textColor="#FFFFFF"
	            android:gravity="left"
	            />
	        <TextView
	            android:id="@+id/maxDistanceView"
	            android:text="@string/no_data"
	            android:layout_height="wrap_content"
	            android:layout_width="0dp"
	            android:layout_weight="1"
	            android:textSize="20sp"
	            android:textColor="#FFFFFF"
	            android:gravity="right"
	            />
	        </LinearLayout>
	    <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="#555555">
	        <TextView
	            android:text="@string/max_delta_sag"
	            android:layout_height="wrap_content"
	            android:layout_width="0dp"
	            android:layout_weight="1"
	            android:textSize="20sp"
	            android:textColor="#FFFFFF"
	            android:gravity="left"/>
	        <TextView
	            android:id="@+id/maxDistanceSagitalView"
	            android:text="@string/no_data"
	            android:layout_height="wrap_content"
	            android:layout_width="0dp" 
	            android:layout_weight="1"
	            android:textSize="20sp"
	            android:textColor="#FFFFFF"
	            android:gravity="right"/>
        </LinearLayout>  
         <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="#555555">
	        <TextView
	            android:text="@string/max_delta_cor"
	            android:layout_height="wrap_content"
	            android:layout_width="0dp"
	            android:layout_weight="1"
	            android:textSize="20sp"
	            android:textColor="#FFFFFF"
	            android:gravity="left"/>
	        <TextView
	            android:id="@+id/maxDistanceCoronalView"
	            android:text="@string/no_data"
	            android:layout_height="wrap_content"
	            android:layout_width="0dp" 
	            android:layout_weight="1"
	            android:textSize="20sp"
	            android:textColor="#FFFFFF"
	            android:gravity="right"/>
        </LinearLayout> 
        <LinearLayout
            android:orientation="horizontal"
        	android:layout_height="wrap_content"
        	android:layout_width="match_parent" 
        	android:background="#555555">
	        <TextView
	            android:text="@string/goodTimePercentageViewLabel"
	            android:layout_height="wrap_content"
	            android:layout_width="0dp"
	            android:layout_weight="1"
	            android:textSize="20sp"
	            android:textColor="#FFFFFF"
	            android:gravity="left"
	            />
	        <TextView
	            android:id="@+id/goodTimePercentageView"
	            android:text="@string/GoodTimePercentageValue"
	            android:layout_height="wrap_content"
	            android:layout_width="0dp"
	            android:layout_weight="1"
	            android:textSize="20sp"
	            android:textColor="#FFFFFF"
	            android:gravity="right"
	            />
        </LinearLayout>    
        <LinearLayout
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="#555555"
    	>
	         <!--  android:visibility="gone"-->
	        <TextView
	            
	            android:text="@string/log_file_name_view_label"
	            android:layout_height="wrap_content"
	            android:layout_width="0dp"
	            android:layout_weight="1"
	            android:textSize="20sp"
	            android:textColor="#FFFFFF"
	            android:gravity="left"
	            />
	        <TextView
	            android:id="@+id/LogFileName"
	            android:text="@string/log_file_name_view_value"
	            android:layout_height="wrap_content"
	            android:layout_width="0dp"
	            android:layout_weight="1"
	            android:textSize="20sp"
	            android:textColor="#FFFFFF"
	            android:gravity="right"
	            />
	        </LinearLayout>
	        
         <LinearLayout
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="#555555"
        android:visibility="gone"
    	>
	         
	        <TextView
	            
	            android:text="@string/logging_feature_view_label"
	            android:layout_height="wrap_content"
	            android:layout_width="0dp"
	            android:layout_weight="1"
	            android:textSize="20sp"
	            android:textColor="#FFFFFF"
	            android:gravity="left"
	            />
	        <TextView
	            android:id="@+id/LogFeatureSetting"
	            android:text="@string/logging_feature_view_value"
	            android:layout_height="wrap_content"
	            android:layout_width="0dp"
	            android:layout_weight="1"
	            android:textSize="20sp"
	            android:textColor="#FFFFFF"
	            android:gravity="right"
	            />
	        </LinearLayout>
         <LinearLayout
	        android:orientation="horizontal"
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent"
	        android:background="#333333"
	        android:layout_weight="1"
    	></LinearLayout>
         <LinearLayout
	        android:orientation="horizontal"
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent"
	        android:background="#333333"
    	>

             <Button
                 android:id="@+id/save_state_button"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:layout_marginTop="0dp"
                 android:layout_weight="1"
                 android:onClick="onClickSaveState"
                 android:text="@string/save_state_button_label" />

             <ToggleButton
                 android:id="@+id/start_process_button"
                 style="android:buttonStyleToggle"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:layout_marginTop="0dp"
                 android:layout_weight="1"
                 android:onClick="onClickStartProcess"
                 android:textOff="Start Processing"
                 android:textOn="Stop Processing" />

        </LinearLayout>
        <LinearLayout
	        android:orientation="horizontal"
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent"
	        android:background="#333333"
    	>
	        <Button
	            android:id="@+id/open_create_log_file_activity"
	            android:text="@string/create_log_file_button_label"
	            android:onClick="onClickOpenLogFileActivity"
	            android:layout_height="wrap_content"
	            android:layout_width="0dp"
	            android:layout_weight="1"
	            android:layout_margin="5dp"
	            android:layout_marginTop="0dp"
	        />
	        <Button
	            android:id="@+id/make_stamp_in_log_file"
	            android:text="@string/stamp_in_log_button_label"
	            android:onClick="onClickStampLog"
	            android:layout_height="wrap_content"
	            android:layout_width="0dp"
	            android:layout_weight="1"
	            android:layout_margin="5dp"
	            android:layout_marginTop="0dp"
	            />
	    </LinearLayout>
        
	   <!--  <TextView
	            
	            android:text="Set &#x394; threshold:"
	            android:layout_height="wrap_content"
	            android:layout_width="match_parent"
	            android:textSize="20dip"
	            android:textColor="#FFFFFF"
	            android:layout_marginTop="10dip"
	            />
         <LinearLayout
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="#555555"
    >
            <Button
                android:id="@+id/decreaseTresholdButton"
                android:text="&lt;"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickDecreaseTreshold"></Button>
            <TextView
                android:id="@+id/tresholdView"
                android:text="1"
                android:textSize="20dip"
                android:textColor="#FFFFFF"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"/>
            <Button
                android:id="@+id/increaseTresholdButton"
                android:text="&gt;"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickIncreaseTreshold"></Button>
        </LinearLayout>-->
</LinearLayout>